hide code folding gutter triangles by default and show them in special cases

--- a/theme.less
+++ b/theme.less
@@ -1,3 +1,6 @@
-.CodeMirror-foldgutter-open:after, .CodeMirror-foldgutter-folded:after, .CodeMirror.over-gutter .CodeMirror-foldgutter-open:after, .CodeMirror-activeline .CodeMirror-foldgutter-open:after {
-	opacity: 0.5;
+.CodeMirror-foldgutter-open:after, .CodeMirror-activeline .CodeMirror-foldgutter-open:after {
+	opacity: 0;
+}
+.CodeMirror.over-gutter .CodeMirror-foldgutter-open:after {
+    opacity: 1;
 }
